fix viwport height on mobile

--- a/css/main.css
+++ b/css/main.css
@@ -4,7 +4,7 @@ body {
 }
 
 html, body {
-    height: 100vh;
+    height: 100dvh;
     width: 100%;
 }
 
@@ -176,7 +176,7 @@ html, body {
 }
 
 .bocnimenucontent {
-    height: calc(100vh - 241px);
+    height: calc(100dvh - 241px);
     background-color: #fafafa;
     padding: 12px 24px;
     display: none;
@@ -185,7 +185,7 @@ html, body {
 
 @media only screen and (max-width: 600px) {
     .bocnimenucontent {
-        height: calc(100vh - 186px);
+        height: calc(100dvh - 186px);
     }  
 }
 
